src/test/deca/syntax/invalid/resultats/test31_readInt-lex.res
'{': [@0,300:300='{',<36>,15:0]
IDENT: [@1,303:305='int',<26>,16:1]
IDENT: [@2,307:307='x',<26>,16:5]
';': [@3,308:308=';',<39>,16:6]
IDENT: [@4,311:311='x',<26>,17:1]
'=': [@5,312:312='=',<29>,17:2]
'readInt': [@6,313:319='readInt',<15>,17:3]
'(': [@7,320:320='(',<34>,17:10]
';': [@8,321:321=';',<39>,17:11]
'}': [@9,323:323='}',<37>,18:0]
